# pico-projects

./: CMakeLists.txt
.github/workflows/: codeql.yml
serial/: CMakeLists.txt  serial.c
shift/: CMakeLists.txt  shift.c
stepper/: CMakeLists.txt  stepper.c
temp/: CMakeLists.txt  temp.c
